Adding stylesheets through SASS (remember to npm install on server

--- a/client/components/graph.scss
+++ b/client/components/graph.scss
@@ -1,4 +1,4 @@
-/* #reviews-graph {
+#reviews-graph {
   font-family:"Motiva Sans", sans-serif;
   text-align:left;
 }
@@ -105,4 +105,4 @@
   padding-right: 5px;
   color:#000;
   background-color:rgb(102,192,244)
-}  */
+} 
