--- a/client/components/graph.scss
+++ b/client/components/graph.scss
@@ -61,6 +61,16 @@
   margin-right:5px;
 }
 
+#reviews-graph .question {
+  display:inline-block;
+  color:#fff;
+  cursor:help;
+  background-color: gray;
+  margin-left:5px;
+  padding:0 3px;
+  border-radius:10px;
+}
+
 #reviews-graph .leftcol.graph{
   height: 440px;
 }
@@ -96,7 +106,8 @@
   float: right;
   text-align:left;
   padding-left: 5px;
-  background-color:rgb(163,76,37)
+  background-color:rgb(163,76,37);
+  cursor: pointer;
 } 
 
 #reviews-graph td.positive div {
@@ -104,5 +115,6 @@
   text-align:right;
   padding-right: 5px;
   color:#000;
-  background-color:rgb(102,192,244)
+  background-color:rgb(102,192,244);
+  cursor: pointer;
 } 
